welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: value update is not a member of java.awt.Color
	getCouleurSol() = tab(i)
        ^