welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var tab = new Array[Color](getMondeHauteur())
for (i <- 0 to getMondeHauteur()){
	getCouleurSol() = tab(i)
	avance()
}
}
